<resources>
    <string-array name="data_title">
        <item>A Star Is Born</item>
        <item>Alita: Battle Angel</item>
        <item>Aquaman</item>
        <item>Bohemian Rhapsody</item>
        <item>Cold Pursuit</item>
        <item>Creed II</item>
        <item>Fantastic Beasts: The Crimes of Grindelwald</item>
        <item>Glass</item>
        <item>How to Train Your Dragon : The Hidden World</item>
        <item>Avengers : Infinity Wars</item>
        <item>Mary Queen of Scots</item>
        <item>Master Z: Ip Man Legacy</item>
        <item>Mortal Engines</item>
        <item>Overlord</item>
        <item>Ralph Breaks the Internet</item>
        <item>Robin Hood</item>
        <item>Serenity</item>
        <item>Spiderman</item>
        <item>T34</item>
    </string-array>
    <string-array name="data_year">
        <item>October 5, 2018</item>
        <item>January 31, 2019</item>
        <item>December 21, 2018</item>
        <item>October 24, 2018</item>
        <item>February 7, 2019</item>
        <item>November 21, 2018</item>
        <item>November 14, 2018</item>
        <item>January 16, 2019</item>
        <item>January 3, 2019</item>
        <item>April 27, 2018</item>
        <item>December 7, 2018</item>
        <item>December 20, 2018</item>
        <item>November 27, 2018</item>
        <item>November 1, 2018</item>
        <item>November 20, 2018</item>
        <item>November 20, 2018</item>
        <item>January 24, 2019</item>
        <item>December 14, 2018</item>
        <item>December 27, 2018</item>
    </string-array>
    <string-array name="data_rating">
        <item>75</item>
        <item>66</item>
        <item>83</item>
        <item>70</item>
        <item>81</item>
        <item>65</item>
        <item>69</item>
        <item>71</item>
        <item>78</item>
        <item>74</item>
        <item>66</item>
        <item>50</item>
        <item>67</item>
        <item>59</item>
        <item>67</item>
        <item>72</item>
        <item>57</item>
        <item>50</item>
        <item>85</item>
        <item>48</item>
    </string-array>
    <string-array name="data_ov">
        <item>Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>When Alita awakens with no memory of who she is in a future world she does not recognize, she is taken in by Ido, a compassionate doctor who realizes that somewhere in this abandoned cyborg shell is the heart and soul of a young woman with an extraordinary past.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>Nels Coxman\'s quiet life comes crashing down when his beloved son dies under mysterious circumstances. His search for the truth soon becomes a quest for revenge as he seeks coldblooded justice against a drug lord and his inner circle.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his family\'s past, Adonis Creed is up against the challenge of his life.</item>
        <item>Gellert Grindelwald has escaped imprisonment and has begun gathering followers to his cause—elevating wizards above all non-magical beings. The only one capable of putting a stop to him is the wizard he once called his closest friend, Albus Dumbledore. However, Dumbledore will need to seek help from the wizard who had thwarted Grindelwald once before, his former student Newt Scamander, who agrees to help, unaware of the dangers that lie ahead. Lines are drawn as love and loyalty are tested, even among the truest friends and family, in an increasingly divided wizarding world.</item>
        <item>In a series of escalating encounters, security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>In 1561, Mary Stuart, widow of the King of France, returns to Scotland, reclaims her rightful throne and menaces the future of Queen Elizabeth I as ruler of England, because she has a legitimate claim to the English throne. Betrayals, rebellions, conspiracies and their own life choices imperil both Queens. They experience the bitter cost of power, until their tragic fate is finally fulfilled. Featured Crew</item>
        <item>After being defeated by Ip Man, Cheung Tin Chi is attempting to keep a low profile. While going about his business, he gets into a fight with a foreigner by the name of Davidson, who is a big boss behind the bar district. Tin Chi fights hard with Wing Chun and earns respect.</item>
        <item>Many thousands of years in the future, Earth’s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the wastelands who will change the course of his life forever.</item>
        <item>France, June 1944. On the eve of D-Day, some American paratroopers fall behind enemy lines after their aircraft crashes while on a mission to destroy a radio tower in a small village near the beaches of Normandy. After reaching their target, the surviving paratroopers realise that, in addition to fighting the Nazi troops that patrol the village, they also must fight against something else.</item>
        <item>Video game bad guy Ralph and fellow misfit Vanellope von Schweetz must risk it all by traveling to the World Wide Web in search of a replacement part to save Vanellope\'s video game, \"Sugar Rush.\" In way over their heads, Ralph and Vanellope rely on the citizens of the internet — the netizens — to help navigate their way, including an entrepreneur named Yesss, who is the head algorithm and the heart and soul of trend-making site BuzzzTube.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>Baker Dill is a fishing boat captain leading tours off a tranquil, tropical enclave called Plymouth Island. His quiet life is shattered, however, when his ex-wife Karen tracks him down with a desperate plea for help.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson \"Kingpin\" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>In 1944, a courageous group of Russian soldiers managed to escape from German captivity in a half-destroyed legendary T-34 tank. Those were the times of unforgettable bravery, fierce fighting, unbreakable love, and legendary miracles.</item>
    </string-array>
    <string name="short_description_of_the_movies">Short Description of the movies</string>
    <string name="_0">0%</string>
    <string name="title">Movie Title</string>
    <string name="cd_movie_poster">movie_poster</string>
    <string name="overview">Overview</string>
    <string name="loading_data">Loading Data</string>
    <string name="settings">Language</string>
    <string name="english">English</string>
    <string name="bahasa_indonesia">Bahasa Indonesia</string>
    <string name="save_changes">Save Changes</string>
    <string name="search_movie">Search Movie</string>
    <string name="reminder">Reminder</string>
    <string name="widgets">Widgets</string>
</resources>