<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_search"
        android:title="@string/search_movie"
        android:icon = "@drawable/ic_search_white_24dp"
        app:showAsAction="always" />
    <item android:id="@+id/menu_bahasa"
        android:title="@string/settings"
        android:icon = "@drawable/ic_language_black_24dp"
        app:showAsAction="never" />
    <item android:id="@+id/menu_reminder"
        android:title="@string/reminder"
        android:icon = "@drawable/ic_notifications_none_black_24dp"
        app:showAsAction="never" />
    <item android:id="@+id/menu_widgets"
        android:title="@string/widgets"
        android:icon = "@drawable/ic_widgets_black_24dp"
        app:showAsAction="never" />

</menu>